<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Registro - Studente</string>
    <string name="dashboard_title">La Mia Dashboard</string>
    <string name="welcome_student">Ciao, %1$s!</string>
    <string name="grades_title">I Miei Voti</string>
    <string name="agenda_title">Compiti &amp; Agenda</string>
    <string name="attendance_title">Presenze &amp; Assenze</string>
    <string name="report_card_title">La Mia Pagella</string>
    <string name="gpa_average">Media Generale</string>
    <string name="recent_grades">Ultimi Voti Inseriti</string>
    <string name="today_lessons">Orario Lezioni Oggi</string>
    <string name="absences_count">Assenze Totali</string>
    <string name="lates_count">Ritardi Totali</string>
    <string name="no_data">Nessun dato disponibile</string>
    <string name="login_subtitle">Accedi al tuo account</string>
    <string name="email_label">Email Studente</string>
    <string name="password_label">Password</string>
    <string name="btn_login">ACCEDI</string>
    <string name="err_enter_credentials">Inserisci email e password</string>
    <string name="logout">Disconnetti</string>
    <string name="settings">Impostazioni</string>
    <string name="badges_title">I Miei Badge</string>
    <string name="pcto_title">Percorsi PCTO</string>
    <string name="restriction_server_url_title">URL Server Scuola (MDM)</string>
    <string name="restriction_server_url_desc">URL endpoint del server backend distribuito tramite MDM</string>
    <string name="restriction_school_code_title">Codice Meccanografico Scuola</string>
    <string name="restriction_school_code_desc">Codice identificativo ministeriale dell\'istituto scolastico</string>
    <string name="restriction_kiosk_mode_title">Modalità Kiosk Esame / Tablet Condiviso</string>
    <string name="restriction_kiosk_mode_desc">Disabilita navigazione esterna e lock dell\'app</string>
    <string name="tab_home">Home</string>
    <string name="tab_grades">Voti</string>
    <string name="tab_agenda">Agenda</string>
    <string name="tab_attendance">Presenze</string>
    <string name="tab_report_card">Pagella</string>
    <string name="grade_type_written">Scritto</string>
    <string name="grade_type_oral">Orale</string>
    <string name="grade_type_practical">Pratico</string>
    <string name="grade_type_test">Test</string>
    <string name="grade_type_project">Progetto</string>
    <string name="grade_type_lab">Laboratorio</string>
    <string name="attendance_present">Presenza</string>
    <string name="attendance_absent">Assenza</string>
    <string name="attendance_late">Ritardo</string>
    <string name="attendance_early_exit">Uscita Anticipata</string>
</resources>
